tests/fixtures/invalid/none_bitxor_float.py
# Cannot bitwise XOR None and Float
x: float = None ^ 1.0
